# CoregisterUtility

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/coregister_utility/: __init__.py  _featureMatchers.py  _image_collections.py  _outputStrategies.py
src/coregister_utility/_ui/: BigWarpWrapper.py  __init__.py  gui.py  mainUI.py
src/ijtransformer/: BigWarpWrapper.py  Optimization_Example.groovy  Optimization_Example.java  _featureMatchers.py  _outputStrategies.py  bridge.py  gui.py  iMacro.groovy  iMacro.java  imageCollection.py
test/: test_gui.py
